--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+{
   "name": "mamãe-alicia",
   "version": "1.0.0",
   "private": true,
@@ -10,6 +11,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "vercel-build": "next build"
   }
 }
