--- a/package.json
+++ b/package.json
@@ -1,16 +1,1 @@
-{
-  "name": "mamãe-alicia",
-  "version": "1.0.0",
-  "private": true,
-  "dependencies": {
-    "next": "13.4.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "vercel-build": "next build"
-  }
-}
+{"type": "commonjs"}
